--- a/css/web.css
+++ b/css/web.css
@@ -1,212 +1,243 @@
-.color-change{
-    color:#1cc1d6!important;
+.color-change {
+  color: #1cc1d6 !important;
 }
-.bc-color-change{
-    background: #18c1d6;
+
+.bc-color-change {
+  background: #18c1d6;
 }
-input{
-    outline: none;
-    padding-left:5px;
+
+input {
+  outline: none;
+  padding-left: 5px;
 }
-.container{
-    width: 500px;
-	height: auto;
-	background-color: #ffffff;
-	box-shadow: 0px 3px 10px 0px 
-		rgba(0, 0, 0, 0.5);
-    border-radius: 4px;
-    margin:20px auto;
-    padding:10px 0;
+
+.container {
+  width: 500px;
+  height: auto;
+  background-color: #ffffff;
+  box-shadow: 0px 3px 10px 0px rgba(0, 0, 0, 0.5);
+  border-radius: 4px;
+  margin: 20px auto;
+  padding: 10px 0;
 }
-.partOne,.partTwo{
-    width:80%;
-    margin:auto;
+
+.partOne, .partTwo {
+  width: 80%;
+  margin: auto;
 }
-.partOne>p:first-child{
-    display: flex;
-    /* justify-content: flex-start; */
-    align-items: center;
+
+.partOne > p:first-child {
+  display: flex;
+  /* justify-content: flex-start; */
+  align-items: center;
 }
-.partOne>p:first-child>span{
-    /* width: 122px;
-	height: 34px; */
-	background-color: #ffffff;
-	border-radius: 4px;
-    border: solid 1px #ddd;
-   cursor: pointer;
-    text-align: center;
-    padding: 5px 10px;
-    color:#333;
-    margin:0 20px -10px 0;
+
+.partOne > p:first-child > span {
+  /* width: 122px;
+  height: 34px; */
+  background-color: #ffffff;
+  border-radius: 4px;
+  border: solid 1px #ddd;
+  cursor: pointer;
+  text-align: center;
+  padding: 5px 10px;
+  color: #333;
+  margin: 0 20px -10px 0;
+  font-size: 12px;
 }
-.tabChange{
-    display: flex;
-    align-items: center;
+
+.tabChange {
+  display: flex;
+  align-items: center;
 }
-.tabChange>span{
-    font-size: 14px;
+
+.tabChange > span {
+  font-size: 12px;
 }
-.tabChange>div{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin:0 10px;
-    cursor: pointer;
-    font-size: 14px;
+
+.tabChange > div {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0 10px;
+  cursor: pointer;
+  font-size: 12px;
 }
-.tabChange>div>p{
-    width: 16px;
-    height: 16px;
-    border-radius: 10px;
-    border: solid 1px #1cc1d6;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-right: 5px;
+
+.tabChange > div > p {
+  width: 16px;
+  height: 16px;
+  border-radius: 10px;
+  border: solid 1px #1cc1d6;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-right: 5px;
 }
-.tabChange>div>p>span{
-    display: inline-block;
-    width: 60%;
-    height: 60%;
-    border-radius: 10px;
-    
+
+.tabChange > div > p > span {
+  display: inline-block;
+  width: 60%;
+  height: 60%;
+  border-radius: 10px;
+
 }
-.selected{
-    background:#1cc1d6;
+
+.selected {
+  background: #1cc1d6;
 }
-.InvoiceRise{
-    display: flex;
-    align-items: center;
-    position: relative;
-    height: 60px;
+
+.InvoiceRise {
+  display: flex;
+  align-items: center;
+  position: relative;
+  height: 60px;
 }
-.InvoiceRise>span{
-    width: 56px;
-	height: 15px;
-	font-size: 14px;
-    /* line-height: 15px; */
-    color: #333333;
-    text-align: right;
-    margin-right: 10px;
+
+.InvoiceRise > span {
+  width: 56px;
+  height: 15px;
+  font-size: 12px;
+  /* line-height: 15px; */
+  color: #333333;
+  text-align: right;
+  margin-right: 10px;
 }
-.InvoiceRise>p{
-    display: flex;
-    justify-content:space-between;
-    align-items: center;
-    width: 222px;
-    height: 36px;
-    line-height: 34px;
-	background-color: #ffffff;
-	border-radius: 4px;
-    border: solid 1px #dddddd;
-    margin: 5px 0 -5px 0px;
+
+.InvoiceRise > p {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 222px;
+  height: 36px;
+  line-height: 34px;
+  background-color: #ffffff;
+  border-radius: 4px;
+  border: solid 1px #dddddd;
+  margin: 5px 0 -5px 0px;
 }
-.InvoiceRise>p>input{
-    width: 182px;
-    height: 85%;
-    border: 0;
+
+.InvoiceRise > p > input {
+  width: 182px;
+  height: 30px;
+  border: 0;
 }
-.InvoiceRise>p>i{
-    display: inline-block;
-    width: 16px;
-    height: 16px;
-    margin-right: 5px;
-    cursor: pointer;
-    background: url("../images/arrow-down.png") no-repeat center;
+
+.InvoiceRise > p > i {
+  display: inline-block;
+  width: 16px;
+  height: 16px;
+  margin-right: 5px;
+  cursor: pointer;
+  background: url("../images/arrow-down.png") no-repeat center;
 }
-.drop-down{
-    width:222px;
-    height:180px;
-    overflow:auto;
-    position: absolute;
-    top:54px;
-    left:66px;
-    background: #fff;
-    border:1px solid #ddd;
-    border-radius: 5px;
+
+.drop-down {
+  width: 222px;
+  height: 180px;
+  overflow: auto;
+  position: absolute;
+  top: 54px;
+  left: 66px;
+  background: #fff;
+  border: 1px solid #ddd;
+  border-radius: 5px;
 }
-.drop-down>p{
-    margin: 5px 0;
-    padding: 0px 5px 5px 5px;
-    font-size: 12px;
-    /* width:100%; */
-    overflow: hidden;
-    white-space: nowrap;
-    text-overflow: ellipsis;
-    border-bottom:1px solid #ddd;
-    cursor: pointer;
+
+.drop-down > p {
+  margin: 5px 0;
+  padding: 0px 5px 5px 5px;
+  font-size: 12px;
+  /* width:100%; */
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  border-bottom: 1px solid #ddd;
+  cursor: pointer;
 }
-.public-r{
-    display: flex;
-    align-items: center;
-    height: 50px;
+
+.public-r {
+  display: flex;
+  align-items: center;
+  height: 50px;
 }
-.public-r input{
-    width: 216px;
-	height: 34px;
-	background-color: #ffffff;
-	border-radius: 4px;
-	border: solid 1px #dddddd;
+
+.public-r input {
+  width: 216px;
+  height: 30px;
+  background-color: #ffffff;
+  border-radius: 4px;
+  border: solid 1px #dddddd;
 }
-.public-r>span:first-child{
-    display: inline-block;
-    width: 56px;
-	height: 15px;
-	font-size: 14px;
-    color: #333333;
-    text-align: right;
-    margin-right: 10px;
+
+.public-r > span:first-child {
+  display: inline-block;
+  width: 56px;
+  height: 15px;
+  font-size: 12px;
+  color: #333333;
+  text-align: right;
+  margin-right: 10px;
 }
-.partOne>p:last-child>span:first-child{
-    font-size: 14px;
-	color: #333333;
+
+.partOne > p:last-child > span:first-child {
+  font-size: 12px;
+  color: #333333;
 }
-.partOne>p:last-child>span:last-child{
-    margin-left: 5px;
-   padding:5px 20px;
-	background-color: #ffffff;
-	border-radius: 4px;
-    border: solid 1px #1cc1d6;
-    font-size: 14px;
+
+.partOne > p:last-child > span:last-child {
+  margin-left: 5px;
+  padding: 5px 20px;
+  background-color: #ffffff;
+  border-radius: 4px;
+  border: solid 1px #1cc1d6;
+  font-size: 12px;
 }
-.titleReceive{
-    height: 40px;
-    line-height: 40px;
-	background-color: #ececec;
+
+.titleReceive {
+  height: 40px;
+  line-height: 40px;
+  background-color: #ececec;
 }
-.titleReceive>p{
-    width: 80%;
-    margin:0 auto;
-    font-size: 14px;
-	color: #666666;
+
+.titleReceive > p {
+  width: 80%;
+  margin: 0 auto;
+  font-size: 12px;
+  color: #666666;
 }
-.partTwo>p{
-    display: flex;
-    align-items: center;
+
+.partTwo > p {
+  display: flex;
+  align-items: center;
 }
-.partTwo>p:first-child input,.partTwo>p:nth-child(2) input{
-    width: 216px;
-	height: 34px;
-	background-color: #ffffff;
-	border-radius: 4px;
-	border: solid 1px #dddddd;
+
+.partTwo > p:first-child input, .partTwo > p:nth-child(2) input {
+  width: 216px;
+  height: 30px;
+  background-color: #ffffff;
+  border-radius: 4px;
+  border: solid 1px #dddddd;
 }
-.partTwo>p:not(:last-child)>span:first-child{
-    display: inline-block;
-    width: 56px;
-	height: 15px;
-	font-size: 14px;
-    color: #333333;
-    text-align: right;
-    margin-right: 10px;
+
+.partTwo > p:not(:last-child) > span:first-child {
+  display: inline-block;
+  width: 56px;
+  height: 15px;
+  font-size: 12px;
+  color: #333333;
+  text-align: right;
+  margin-right: 10px;
 }
-.partTwo>p:last-child{
-    justify-content: center;
+
+.partTwo > p:last-child {
+  justify-content: center;
 }
-.partTwo>p:last-child>span{
-    text-align: center;
-    padding: 5px 30px;
-    border-radius: 5px;
-    color: #fff;
-    cursor: pointer;
+
+.partTwo > p:last-child > span {
+  text-align: center;
+  padding: 5px 30px;
+  border-radius: 5px;
+  color: #fff;
+  cursor: pointer;
 }
